--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- <h3 class="heading-tertiary u-margin-bottom-small">Seeking Summer 2022 Internship</h3> -->
                         <p>
                             Howdy, I'm Roope! I am a junior at Texas A&M University, studying Computer Science.
-                            I am am a dual-citizen of Finland and the U.S, and speak both
+                            I am a dual-citizen of Finland and the U.S, and speak both
                             languages fluently. I am incredibly passionate about solving difficult problems, especially ones
                             involving mathematics! I grew up playing hockey at a high level, so I am naturally a competitor 
                             with a relentless work-ethic, inside-and-out of school. I am seeking an internship for the Summer 
